# cv-ninja

./: .env.example  .gitignore  README.md  endpoints.example.yaml  endpoints.yaml  endpoints.yaml.example  labelstudio_config.xml  predictions.json  pyproject.toml  voc_to_labelstudio.py
.claude/: README.md
dataset/pascal_voc/: C40752_13_00008_0_0.xml  C40752_13_00008_0_1.xml  C40752_13_00008_0_2.xml  C40752_13_00008_1_0.xml  C40752_13_00008_1_1.xml  C77759_02_00005_0_1.xml  C77759_02_00005_0_2.xml  C77759_02_00005_1_0.xml  C77759_02_00005_1_1.xml
examples/: format_conversion_example.py
src/cv_ninja/: __init__.py  voc_to_labelstudio.py
src/cv_ninja/cli/: __init__.py  main.py
src/cv_ninja/cli/commands/: __init__.py  convert_commands.py  predict_commands.py
src/cv_ninja/converters/: __init__.py  base.py  labelme_to_labelstudio.py  voc_to_labelstudio.py
src/cv_ninja/predictors/: __init__.py  auth.py  base.py  config.py  formats.py  http_handler.py  input_types.py  output_formatter.py  tiling.py
src/cv_ninja/utils/: __init__.py  exceptions.py
